Add server accout delete and pasword changes, and remove unsued classes
- Add user selectable option 'Delete account on server' when user remove an account; user must login to perform this action.
- While user is login, changing local password will also change password on the server.
- Revert deletion of AudioSilenceSystem, AudioSilenceCaptureDevice, AudioSilenceMediaDevice classes
- Upgrade smack library to version 4.4.7
- Reset and cleanup mysql database version and creation.

--- a/aTalk/ReleaseNotes.txt
+++ b/aTalk/ReleaseNotes.txt
@@ -1,15 +1,23 @@
 Project aTalk-Android Release Notes
 =========================================================================
 Version:        4.0.x (400000)
-Release Date:   11/28/2023
+Release Date:   12/28/2023
 Author:         cmeng
+
+/* === 12/12/2023 === */
+- Add user selectable option 'Delete account on server' when user remove an account; user must login to perform this action.
+- While user is login, changing local password will also change password on the server.
+- Revert deletion of AudioSilenceSystem, AudioSilenceCaptureDevice, AudioSilenceMediaDevice classes
+- Upgrade smack library to version 4.4.7
+- Reset and cleanup mysql database version and creation.
+
+/* === 11/28/2023 === */
 - Remove SIP and ICQ protocols and preference settings support
 - Remove aTalk unused codec, audio system and unused classes:
   * portaudio, pulseaudio, quicktime, and video4Linux protocol directory
-  * PortAudioRenderer, PulseAudioRenderer, WASAPIRenderer,
-  * AudioSilenceCaptureDevice, AudioSilenceMediaDevice,
-  * AudioSilenceSystem, DirectShowSystem, PortAudioSystem, PulseAudioSystem,
-    QuickTimeSystem, NoneAudioSystem, and Video4Linux2System
+  * PortAudioRenderer, PulseAudioRenderer, PortAudioSystem, PulseAudioSystem,
+  * WASAPIRenderer, DirectShowSystem, QuickTimeSystem and Video4Linux2System
+  * AudioSilenceSystem, AudioSilenceCaptureDevice, AudioSilenceMediaDevice,
 - Build openssl jni library without installing the man document.
 
 /* === 11/25/2023 === */
