--- a/entry/ReleaseNotes.txt
+++ b/entry/ReleaseNotes.txt
@@ -1,5 +1,13 @@
 Project aTalk-ohos Release Notes
 =========================================================================
+Version:        00.02.030 (0002030)
+Release Date:   01/12/2024
+Author:         cmeng
+- Revert to set distributionUrl=https://services.gradle.org/distributions/gradle-7.6-bin.zip
+  in gradle-wrapper.properties; gradle-8.x does not generate the required smack jarjar files at all.
+- Use implementation jarjar.repackage("filename.jar") to ensure destinationName is set correctly.
+
+=========================================================================
 Version:        00.02.020 (0002020)
 Release Date:   12/30/2023
 Author:         cmeng
