--- a/android-youtube-player/core/src/main/res/values/strings.xml
+++ b/android-youtube-player/core/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="ayp_null_time">0:00</string>
     <string name="ayp_open_video_in_youtube">Open video in YouTube</string>
     <string name="ayp_full_screen_button">Full screen button</string>
+    <string name="ayp_screen_hide_button">Hide screen button</string>
     <string name="ayp_rate_button">Playback rate button</string>
     <string name="ayp_live">LIVE</string>
     <string name="ayp_custom_action_left">YouTube player Custom action left</string>
