--- a/entry/src/main/res/values-in/strings.xml
+++ b/entry/src/main/res/values-in/strings.xml
@@ -649,7 +649,7 @@
     <string name="username_change_warning">Peringatan: Mengubah nama pengguna akun menjadi \'%1$s\' juga akan membersihkan pesan %2$s untuk akun yang ada \'%3$s\'. Memproses?</string>
     <string name="user_exist_error">Pengguna ini sudah ada di jaringan yang dipilih. Silakan pilih pengguna atau jaringan lain.</string>
 
-	<string name="jan">Jan</string>
+    <string name="jan">Jan</string>
     <string name="feb">Feb</string>
     <string name="mar">Mar</string>
     <string name="apr">Apr</string>
@@ -696,7 +696,7 @@
     <string name="callinfo_decoded_with_fec">Paket di-decode dengan FEC:</string>
     <string name="callinfo_discarded_percent">Paket saat ini dibuang:</string>
     <string name="callinfo_discarded_total">Jumlah paket yang dibuang:</string>
-    
+
     <!-- ICE info -->
     <string name="callinfo_harvesting_data">%1$d ms (untuk %2$d panen)</string>
     <string name="callinfo_harvesting_time">Waktu pemanenan:</string>
@@ -878,7 +878,7 @@
     <string name="contactinfo_user_pictures">Gambar pengguna</string>
     <string name="contactinfo_status_message">Pesan Status</string>
 
-    <!-- Notification strings -->
+    <!-- Notification strings (do not change; getI18NString(NotificationSettings.NOTICE_PREFIX + eventType))-->
     <string name="notificationconfig_event_BusyCall">Panggilan Sibuk</string>
     <string name="notificationconfig_event_BusyCall_description">Deskripsi panggilan sibuk</string>
     <string name="notificationconfig_event_CallSaved">Panggilan Disimpan</string>
@@ -1039,7 +1039,7 @@
     <string name="commit_progress_message">Menyimpan perubahan akun, harap tunggu&#8230;</string>
     <string name="commit_progress_title">"Berkomitmen&#8230;"</string>
     <string name="settings_not_set">(Tidak ditentukan)</string>
-    
+
     <!-- Encoding settings -->
     <string name="enc_audio_title">Enkode audio</string>
     <string name="enc_override_global">Ganti global</string>
@@ -1061,7 +1061,7 @@
     <!-- Jingle Nodes edit -->
     <string name="service_gui_JINGLE_EDIT_JID">Alamat JID</string>
     <string name="service_gui_JINGLE_EDIT_SUPPORT_RELAY">Dukungan relai</string>
-    
+
     <!-- STUN edit -->
     <string name="stun_turn_server">STUN/TURN Server</string>
     <string name="ip_address">Alamat IP</string>
@@ -1418,14 +1418,17 @@
     <string name="next">Next</string>
 
     <!-- Android Permissions -->
+    <string name="app_info">Info Aplikasi…</string>
     <string name="permission_app_info">Info Aplikasi</string>
     <string name="permission_request_all">Meminta semua</string>
-    <string name="permission_audio">Audio</string>
     <string name="permission_camera">Camera</string>
     <string name="permission_contacts">Kontak</string>
     <string name="permission_location">Lokasi</string>
+    <string name="permission_microphone">Audio</string>
+    <string name="permission_music">Musik dan Audio</string>
     <string name="permission_notifications">Notifikasi</string>
     <string name="permission_phone">Telepon</string>
+    <string name="permission_video">Foto dan Video</string>
     <string name="permission_storage">Penyimpanan</string>
     <string name="permission_hint">Untuk aplikasi kinerja maksimum dan dukungan fitur lengkap, aTalk mengharuskan anda memberikan izin untuk layanan berikut. Tanpa mereka, aTalk mungkin tidak berfungsi atau mungkin memiliki perilaku yang tidak terduga!</string>
 
@@ -1434,14 +1437,17 @@
     <string name="permission_denied_permanently">PERMANEN DITOLAK</string>
     <string name="permission_unknown">TIDAK DIKETAHUI</string>
 
-    <string name="audio_permission_denied_dialog_title">Permintaan izin audio</string>
-    <string name="audio_permission_denied_feedback">Panggilan audio tidak akan tersedia sampai anda memberikan permintaan izin</string>
+    <string name="mic_permission_denied_dialog_title">Permintaan izin perekaman audio</string>
+    <string name="mic_permission_denied_feedback">Panggilan audio tidak akan tersedia sampai anda memberikan permintaan izin</string>
 
     <string name="camera_permission_denied_dialog_title">Permintaan izin kamera</string>
     <string name="camera_permission_denied_feedback">Semua kegiatan yang terkait dengan kamera tidak akan tersedia sampai Anda mengabulkan permintaan izin</string>
 
     <string name="contacts_permission_denied_dialog_title">Permintaan izin kontak</string>
     <string name="contacts_permission_denied_feedback">Izin kontak diperlukan untuk akses status ponsel dan pengaturan panggilan</string>
+
+    <string name="music_permission_denied_dialog_title">Permintaan izin musik dan audio</string>
+    <string name="music_permission_denied_feedback">File audio media tidak dapat diakses sampai Anda memberikan permintaan izin</string>
 
     <string name="location_permission_denied_dialog_title">Permintaan izin lokasi</string>
     <string name="location_permission_denied_feedback">Fitur GPS-Lokasi tidak akan tersedia sampai anda memberikan permintaan izin</string>
@@ -1452,12 +1458,16 @@
     <string name="phone_permission_denied_dialog_title">Baca permintaan izin Negara Telepon</string>
     <string name="phone_permission_denied_feedback">Fitur telepon tidak akan tersedia sampai anda memberikan permintaan izin</string>
 
+    <string name="video_permission_denied_dialog_title">Permintaan izin foto dan video</string>
+    <string name="video_permission_denied_feedback">File foto dan video media tidak dapat diakses sampai Anda memberikan permintaan izin</string>
+
     <string name="storage_permission_denied_dialog_title">Permintaan izin penyimpanan</string>
     <string name="storage_permission_denied_feedback">Menyimpan konten yang dikirim dan diterima dalam penyimpanan tidak akan diizinkan sampai Anda mengabulkan permintaan izin</string>
 
     <string name="all_permission_denied_dialog_title">Semua permintaan izin</string>
     <string name="all_permissions_denied_feedback">aTalk mungkin tidak berfungsi dengan benar atau mungkin memiliki perilaku tidak terduga karena beberapa layanan telah ditolak!\nJika anda telah memilih \"Jangan tanyakan lagi \" pilihan, anda harus pergi ke Pengaturan Android - >INFO APP bagi aTalk untuk mengaktifkan izin akses sumber daya</string>
     <string name="permission_denied_all_alert">aTalk tidak akan berfungsi dengan baik. Anda telah menolak aTalk dari semua izin!\nAnda harus pergi ke Pengaturan Android -> INFO APP bagi aTalk untuk mengaktifkan izin akses sumber daya</string>
+
     <string name="permission_rationale_message">Anda disajikan dengan setiap layanan yang dibutuhkan olehTalk;izinkan aTalk mengakses layanan ini untuk fitur lengkap yang didukung</string>
     <string name="permission_rationale_settings_button_text">SETTINGS</string>
     <string name="permission_rationale_title">aTalk memerlukan izin</string>
@@ -1467,5 +1477,4 @@
     <string name="location_permission_dialog_message">Aktifkan izin Lokasi sekarang?</string>
     <string name="location_services_off">Layanan lokasi diTutup</string>
     <string name="open_location_settings">Aktifkan layanan lokasi sekarang?</string>
-
 </resources>
